[gd_scene load_steps=5 format=2]

[ext_resource path="res://Content/Fonts/AGENCYB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Attractions/NetClicker/AllForksDay/Forksgiving/ForkFlipper/ForkFlipper.gd" type="Script" id=2]


[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 7
outline_color = Color( 1, 0.913725, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[node name="ForkFlipper" type="Control"]
margin_right = 153.0
margin_bottom = 152.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.211765, 0.14902, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CardBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClicksLabel" type="Label" parent="CardBG/VBoxContainer"]
margin_right = 113.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.368627, 0.141176, 1 )
text = "999999"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NicknameLabel" type="Label" parent="CardBG/VBoxContainer"]
margin_top = 58.0
margin_right = 113.0
margin_bottom = 112.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
text = "Nickname"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CardBG"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="CardBG/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
